[gd_scene load_steps=4 format=4 uid="uid://dtuc07xfk33qc"]

[ext_resource type="Script" uid="uid://j46jph3agikn" path="res://Prefab/TowerDefense/Mower/MowerHit.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://4jfayk5d18ic" path="res://Asset/Anime/Mower/Hit/MowerHit.tscn" id="2"]
[ext_resource type="Script" uid="uid://b6lojhfkgvhsw" path="res://addons/AdobeAnimateEditor/Node/AdobeAnimateSlot.gd" id="3"]

[node name="MoverHit" type="Node2D"]
z_index = -8
script = ExtResource("1")
itemLayer = 7
gravity = 1.0
gravityScale = 245.0
ySpeed = 1.5

[node name="MowerHitSprite" parent="." node_paths=PackedStringArray("layerSprite") instance=ExtResource("2")]
position = Vector2(24, -8)
trueFrameRate = 30.0
layerSprite = [null, null]

[node name="AdobeAnimateSlot" type="Node2D" parent="MowerHitSprite"]
unique_name_in_owner = true
position = Vector2(-9.25312, 15.9167)
rotation = 0.341231
scale = Vector2(1.00057, 1.00024)
script = ExtResource("3")
followSlotId = 1
offset = Vector2(23, 76)
metadata/_custom_type_script = "uid://b6lojhfkgvhsw"

[connection signal="animeCompleted" from="MowerHitSprite" to="." method="AnimeComplete"]
